# KMU-Computer_Graphics

./: .gitignore  CMakeLists.txt  README.md  a.out  build.sh
include/: DrawUtils.H  MyGlWindow.h  Viewer.h  object.h  stdafx.h
include/FL/: filename.H  math.h
src/: 3DUtils.cpp  DrawUtils.cpp  MMatrix.cpp  MyGlWindow.cpp  main.cpp  stdafx.cpp
